@@ -1,3 +1,7 @@
+2013-06-12  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding optional extra include_end args to logspace() and linspace().
+
 2013-06-11  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Moving Rivet/RivetXXX.hh tools headers into Rivet/Tools/.
